fixed alignment in header + made search submit on enter

--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,10 @@ main {
   gap: 1rem;
 }
 
+.blog-title {
+  margin: 0;
+}
+
 /* Profile */
 
 .profileAvatar {
